--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html id="main">
-    <head>
-        <link href="styles/reset.css">
-        <link href="styles/style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <meta charset="utf-8">
-        <title>Google Homepage</title>
-    </head>
-    <body>
-        <!--HEADER-->
-        <header>
-            <div id="header-div">
-                <a target="_blank" href="#">About</a>
-                <a target="_blank" href="#">Store</a>
-                <a target="_blank" href="#">Gmail</a>
-                <a target="_blank" href="#">Images</a>
-                <button>Sign In</button>
+<head>
+    <link href="styles/reset.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <meta charset="utf-8">
+    <title>Google Homepage</title>
+</head>
+<body>
+<header>
+    <ul class="top-nav" role="navigation">
+        <li><a target="_blank" href="#">About</a></li>
+        <li class="store"><a target="_blank" href="#">Store</a></li>
+        <li><a target="_blank" href="#">Gmail</a></li>
+        <li><a target="_blank" href="#">Images</a></li>
+        <li><i class="material-icons">apps</i></li>
+        <li class="sign-in"><a target="_blank" href=#><strong>Sign In</strong></a></li>
+    </ul>
+</header>
+    <!--CONTAINER: LOGO//SEARCHBAR//BUTTONS-->
+       <div class="flex-container">
+    <!--GOOGLE LOGO-->
+            <div class="logo-div">
+                <img id="logo" src="images/googlelogo_color_272x92dp.png" alt="Google Logo">
             </div>
-        </header>
-       <!--GOOGLE LOGO-->
-        <div id="logo-div">
-            <img id="logo" src="images/googlelogo_color_272x92dp.png" alt="Google Logo">
-        </div>
-        <!-- GOOGLE SEARCH BAR w/ button-->
-        <div class="search-bar">
-            <form>
-                <input type="text" placeholder="">
-                <button type="submit" class="search-button"><i class="material-icons">search</i></button>
-            </form>
+    <!-- GOOGLE SEARCH BAR w/ icons-->
+                <form class="search-bar">
+                    <button type="button" class="magnifying-glass"><i class="material-icons">search</i></button>
+                    <input id="searcher" type="text" placeholder="">
+                    <button type="button" class="microphone"><i class="material-icons">settings_voice</i></button>
+                </form>
+        <!--BUTTONS:GOOGLE SEARCH/FEELING LUCKY -->
+            <div id="button-container">
+                <button type="submit" class="google-search-button">Google Search</button>
+                <button type="submit" class="feeling-lucky-button">I'm Feeling Lucky</button>
+            </div>
         </div>
        <!--Footer-->
-        <footer>
-            <div id="footer-div">
-                <a target="_blank" href="#">Advertising</a>
-                <a target="_blank" href="#">Business</a>
-                <a target="_blank" href="#">How Search works</a>
-                <a target="_blank" href="#">Privacy</a>
-                <a target="_blank" href="#">Terms</a>
-                <a target="_blank" href="#">Settings</a>
-            </div>
-        </footer>
+<footer>
+    <ul class="bottom-nav">
+        <li><a target="_blank" href="#">Advertising</a></li>
+        <li><a target="_blank" href="#">Business</a></li>
+        <li class="how-search-works"><a target="_blank" href="#">How Search works</a></li>
+        <li><a target="_blank" href="#">Privacy</a></li>
+        <li><a target="_blank" href="#">Terms</a></li>
+        <li><a target="_blank" href="#">Settings</a></li>
+    </ul>            
+</footer>
 
-    </body>
+</body>
 </html>
